menu-app/src/main/java/org/example/menuapp/error/messages/ExceptionMessages.java
package org.example.menuapp.error.messages;

public final class ExceptionMessages {
    private ExceptionMessages() {}


    public static final String RESOURCE_NOT_FOUND = "%s not found with ID: %s";
    public static final String FILE_NOT_ABLE_TO_SAVE = "Failed to store the image. Please try again";
}
